<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".yogainstructorfeature.FragmentTimer">

<TextView
android:id="@+id/time_display"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_gravity="center_horizontal"
    android:layout_marginTop="@dimen/margin_top"
android:textAppearance="@android:style/TextAppearance.Large"

android:textSize="80sp"
    />



    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/start_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginRight="@dimen/margin_left"

            android:background="@drawable/timer_start"
            android:src="@drawable/play_timer"
            android:text="@string/button_timer_start" />

<ImageButton
android:id="@+id/stop_button"
android:layout_width="60dp"
android:layout_height="60dp"
android:layout_gravity="center_horizontal"
    android:background="@drawable/timer_start"
android:layout_marginTop="8dp"
    android:src="@drawable/stop_timer"
    android:layout_marginRight="@dimen/margin_left"
android:text="@string/button_timer_stop"
    />

        <ImageButton
            android:id="@+id/reset_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:background="@drawable/timer_start"
            android:src="@drawable/reset_timer"
            android:text="@string/button_timer_reset" />


</LinearLayout>
    </LinearLayout>





